durch zur Freigabe einer neuen Revision durchgerungen

--- a/latex-notizen.ltx
+++ b/latex-notizen.ltx
@@ -14,7 +14,7 @@
 
 
 % ----- Lokale Definitionen -----
-\def\ThisReleaseId{\textbf{Revision~R.1}}
+\def\ThisReleaseId{\textbf{Revision~R.2}}
 % -------------------------------
 
 \hypersetup{
@@ -718,6 +718,7 @@ Alternativ könnte man auch mit der fixen Größeneinheit \texttt{pt} arbeiten.
 \textbf{Revision} & \textbf{Kommentar}  \\
 \midrule
 R.1  &  erste Veröffentlichung \\
+R.2  &  Ergänzungen zur Nutzung von siunitx und Toleranzen \\
 \bottomrule
 \end{tabular}
 
